# book-sommelier-api

./: .env-example  .env-exemple  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
api/: auth.py  main.py
api/models/: book.py
api/repositories/: book_repository.py
api/routes/: auth_routes.py  book_routes.py  docs.py  insights.py
api/services/: book_import_service.py
docs/: ARCHITECTURE.md  swagger.yaml
docs/architecture/: ARCHITECTURE.md
docs/docs/: ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 11ad0d4f6e9a_create_books_table.py
scripts/: __init__.py  insert_books.py  scraper.py  storageInterface.py  writer.py
