[tool.poetry]
name = "tech-challenge-books"
version = "0.1.0"
description = "Pipeline de raspagem de dados e API de recomendação de livros"
package-mode = false
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"